# news-aggregator

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: category.py  content.py  notification.py  recognition.py  source.py  tag.py  transcription.py  webhook.py
app/core/: beta.py  database.py
app/crud/: category.py  content.py  notification.py  recognition.py  source.py  tag.py  transcription.py  webhook.py
app/entity_engine/: analyzer.py  app.py  celeryconfig.py  classifier.py  classifier_en.py  geo_localiser.py  news_samples.py
app/models/: category.py  content.py  lim_news_content,py  notification.py  recognition.py  source.py  tag.py  transcription.py  webhook.py
app/schemas/: category.py  content.py  notification.py  recognition.py  source.py  tag.py  transcription.py  webhook.py
app/services/: services.py
app/services/assets/: content.json  crud_manager.py  source_serializer.py  summarizer.py  trial.json
app/services/audiotranscription/: audio.py  extraction.py
app/services/nlp/: main.py
app/services/nlp/labels/: categories.json  tones.json
app/services/notifications/: main.py
app/services/persistence/: main.py
app/services/rss/: local_rss.py  rss.py  rss_parser.py
app/services/rss/assets/: crud_manager.py  getSources.py  sources.json  trial.json
