[tool.poetry]
package-mode = false
name = "news-aggregator"
version = "0.1.0"
description = "news aggregator"
authors = ["n529joker <ngengerawlings004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.4"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
databases = "^0.9.0"
strawberry-graphql = "^0.237.3"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
lxml = "^5.2.2"
feedparser = "^6.0.11"
marshmallow = "^3.21.3"
marshmallow-sqlalchemy = "^1.0.0"
bcrypt = "^4.2.0"
assemblyai = "^0.32.0"
spacy = "^3.7.5"
uuid = "^1.30"
langchain = "^0.2.14"
openai = "^1.41.1"
langchain-community = "^0.2.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

