[tool.poetry]
package-mode = false
name = "news-aggregator"
version = "0.1.0"
description = "news aggregator"
authors = ["n529joker <ngengerawlings004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.4"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
databases = "^0.9.0"
strawberry-graphql = "^0.237.3"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
lxml = "^5.2.2"
feedparser = "^6.0.11"
marshmallow = "^3.21.3"
marshmallow-sqlalchemy = "^1.0.0"
bcrypt = "^4.2.0"
assemblyai = "^0.32.0"
uuid = "^1.30"
openai = "^1.41.1"
pika = "^1.3.2"
torch = "^2.4.1"
joblib = "^1.4.2"
transformers = "^4.44.2"
apscheduler = "^3.10.4"
aio-pika = "^9.4.3"
torchvision = "^0.19.1"
sentencepiece = "^0.2.0"
protobuf = "^5.28.2"
thinc = "^8.2.2"
spacy = "^3.7.5"
cython = "^3.0.11"
nltk = "^3.9.1"
langdetect = "^1.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
